2015-03-31  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] DnD icon/widget has odd background
        https://bugs.webkit.org/show_bug.cgi?id=143217

        Reviewed by Martin Robinson.

        Use gtk_drag_set_icon_surface() to set the drag icon image,
        instead of DragIcon class.

        * UIProcess/API/gtk/WebKitWebView.cpp:
        * UIProcess/gtk/DragAndDropHandler.cpp:
        (WebKit::DragAndDropHandler::startDrag):
        * UIProcess/gtk/DragAndDropHandler.h:

2015-03-30  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r182172.
        https://bugs.webkit.org/show_bug.cgi?id=143250

        Since this class is an API object, we don't know for sure when
        it will be destroyed. (Requested by kling on #webkit).

        Reverted changeset:

        "WebBackForwardList doesn't need to manually clear the
        snapshot of an entry when removing it."
        https://bugs.webkit.org/show_bug.cgi?id=143231
        http://trac.webkit.org/changeset/182172

2015-03-30  Andreas Kling  <akling@apple.com>

        WebBackForwardList doesn't need to manually clear the snapshot of an entry when removing it.
        <https://webkit.org/b/143231>

        Reviewed by Tim Horton.

        Now that we don't keep WebBackForwardListItem objects alive forever, it's not necessary
        to clear the snapshot when removing them from the WebBackForwardList, since the entire
        object will be deleted shortly after that anyway.

        * UIProcess/WebBackForwardList.cpp:
        (WebKit::WebBackForwardList::didRemoveItem):

2015-03-30  Enrica Casucci  <enrica@apple.com>

        [iOS] WebContent crashing at WebCore: WebCore::Range::collectSelectionRects.
        https://bugs.webkit.org/show_bug.cgi?id=143234
        <rdar://problem/18571345>

        Reviewed by Tim Horton.

        This is a speculative fix that adds a null check before referencing the range.